--- a/xy.html
+++ b/xy.html
@@ -1,1 +1,16 @@
-
+<html>
+  <head>
+    <title>satyam</title>
+  </head>
+  <body>
+    <h1>asdfghj</h1>
+    <a href="http://www.facebook.com>fb</a>
+             </body>
+             <style>
+             body {
+             background-color:blue;
+             color:black;
+             text-alignment:center;
+             }
+             </body>
+             </html>
