--- a/xy.html
+++ b/xy.html
@@ -12,5 +12,6 @@
              color:black;
              text-alignment:center;
              }
+             </style>
              </body>
              </html>
